--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,24 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="stylesheet" href="./style.css">
     <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <header class="header-nav">
+      <div class="header-icon">
+        <img src="" alt="" srcset="">
+
+      </div>
+      <div class="header-menu">
+        <ul class="header-menu-list">
+          <li>Home</li>
+          <li>About</li>
+          <li>News</li>
+          <li>Contact</li>
+        </ul>
+      </div>
+    </header>
     <div id="root"></div>
     <!--
       This HTML file is a template.
@@ -39,5 +53,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    
   </body>
 </html>
